<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/homepagebg"
    android:id="@+id/drawer_layout"
    tools:context=".user.Home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="30dp"
            android:elevation="50dp">

            <LinearLayout
                android:id="@+id/barangayBusinessClearance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/barangay_BC"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="30dp"
            android:elevation="50dp"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/barangayClearance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/barangay_C"
                    android:textColor="#ffff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="30dp"
            android:elevation="50dp"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/barangayCertificate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/barangay_Certificate"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="30dp"
            android:elevation="50dp"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/otherConcerns"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:text="@string/other_concern"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>